--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,17 @@
     <version>1.0-SNAPSHOT</version>
     <name>jax-rs-plus Maven Webapp</name>
     <url>http://maven.apache.org</url>
-    
+
     <dependencies>
         <dependency>
             <groupId>org.glassfish.jersey.bundles</groupId>
             <artifactId>jaxrs-ri</artifactId>
+            <version>2.25</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-moxy</artifactId>
+            <version>2.25</version>
         </dependency>
     </dependencies>
 
